update notes on 16 and 17 about JDK internal encapsulation